--- a/home.html
+++ b/home.html
@@ -1635,7 +1635,7 @@
         </div>
         
         <div class="config-card">
-          <a href="datos-de-la-empresa.html" style="text-decoration: none; color: inherit;">
+          <a href="home-datos.html" style="text-decoration: none; color: inherit;">
             <i class="fas fa-building"></i>
             <h3>Datos de Empresa</h3>
             <p>Configurar información de la empresa</p>
