--- a/home.html
+++ b/home.html
@@ -1177,6 +1177,12 @@
           <i class="fas fa-users"></i> Usuarios
         </a>
       </li>    
+      
+      <li class="nav-item">
+        <a href="carta-mas-clientes.html"class="nav-enlace">
+          <i class="fas fa-file"></i> Clientes
+        </a>
+      </li>
       <li class="nav-item">
         <a href="Reporte-General.html"class="nav-enlace">
           <i class="fas fa-file"></i> Reportes
