--- a/Public-user.html
+++ b/Public-user.html
@@ -1226,7 +1226,7 @@
         }
 
         /* Enlace a empresa en el login */
-        .company-link {
+        .company-lin {
             display: flex;
             align-items: center;
             justify-content: center;
@@ -1237,14 +1237,16 @@
             transition: color 0.2s ease;
         }
 
-        .company-link:hover {
+        .company-lin:hover {
             color: var(--primary-dark);
             text-decoration: underline;
         }
 
-        .company-link i {
+        .company-lin i {
             margin-right: 5px;
         }
+        
+         
     </style>
 </head>
 <body>
@@ -1275,9 +1277,9 @@
                     <i class="fas fa-sign-in-alt"></i> <span data-lang="login">Iniciar Sesión</span>
                 </button>
             </form>
-            <a href="empresa.html" class="company-link">
-                <i class="fas fa-building"></i> Información de la Empresa
-            </a>
+            <a href="empresa.html" class="btn btn-block btn-secondary" style="margin-top: 1rem; text-decoration: none; display: block;">
+    <i class="fas fa-building"></i> Iniciar sesión modo empresa
+</a>
             <div id="loginAlert" class="alert alert-danger" style="display: none;">
                 <i class="fas fa-exclamation-circle"></i>
                 <span id="loginAlertMessage"></span>
@@ -1678,12 +1680,12 @@
     let currentLoan = null;
     let paymentReceipts = [];
     let companyInfo = {
-        nombreEmpresa: "Empresa de Préstamos",
-        rnc: "123-456789-1",
+        nombreEmpresa: "PlusMoney Retom",
+        rnc: "132-0000000-0",
         telefono: "809-555-5555",
         direccion: "Calle Principal #123, Santo Domingo",
         fotoURL: "logo.png",
-        showToClients: false,
+        showToClients: true, // Cambiado a true para mostrar siempre la info de la empresa
         bankAccounts: []
     };
     let userSettings = {
@@ -2072,12 +2074,12 @@
             // Verificar si el préstamo tiene información de empresa asociada
             if (currentLoan.companyInfo) {
                 companyInfo = {
-                    nombreEmpresa: currentLoan.companyInfo.nombreEmpresa || "Empresa de Préstamos",
-                    rnc: currentLoan.companyInfo.rnc || "123-456789-1",
+                    nombreEmpresa: currentLoan.companyInfo.nombreEmpresa || "PlusMoney Retom",
+                    rnc: currentLoan.companyInfo.rnc || "132-0000000-0",
                     telefono: currentLoan.companyInfo.telefono || "809-555-5555",
                     direccion: currentLoan.companyInfo.direccion || "Calle Principal #123, Santo Domingo",
                     fotoURL: currentLoan.companyInfo.fotoURL || "logo.png",
-                    showToClients: currentLoan.companyInfo.showToClients || false,
+                    showToClients: true, // Forzar a mostrar siempre la info de la empresa
                     bankAccounts: currentLoan.companyInfo.bankAccounts || []
                 };
             } else {
@@ -2088,12 +2090,12 @@
                 if (!querySnapshot.empty) {
                     const companyData = querySnapshot.docs[0].data();
                     companyInfo = {
-                        nombreEmpresa: companyData.nombreEmpresa || "Empresa de Préstamos",
-                        rnc: companyData.rnc || "123-456789-1",
+                        nombreEmpresa: companyData.nombreEmpresa || "PlusMoney Retom",
+                        rnc: companyData.rnc || "132-0000000-0",
                         telefono: companyData.telefono || "809-555-5555",
                         direccion: companyData.direccion || "Calle Principal #123, Santo Domingo",
                         fotoURL: companyData.fotoURL || "logo.png",
-                        showToClients: companyData.showToClients || false,
+                        showToClients: true, // Forzar a mostrar siempre la info de la empresa
                         bankAccounts: companyData.bankAccounts || []
                     };
                 }
@@ -2102,12 +2104,12 @@
             console.error("Error al cargar información de la empresa:", error);
             // Mantener los valores por defecto si hay un error
             companyInfo = {
-                nombreEmpresa: "Empresa de Préstamos",
-                rnc: "123-456789-1",
+                nombreEmpresa: "PlusMoney Retom",
+                rnc: "132-0000000-0",
                 telefono: "809-555-5555",
                 direccion: "Calle Principal #123, Santo Domingo",
                 fotoURL: "logo.png",
-                showToClients: false,
+                showToClients: true, // Forzar a mostrar siempre la info de la empresa
                 bankAccounts: []
             };
         }
@@ -2762,14 +2764,12 @@
                 const content = `
                     <div class="receipt-preview" id="receiptPreview_${receiptId}">
                         <div style="text-align: center; margin-bottom: 15px;">
-                            ${receipt.companyInfo.showToClients && receipt.companyInfo.fotoURL ? 
+                            ${receipt.companyInfo.fotoURL ? 
                                 `<img src="${receipt.companyInfo.fotoURL}" alt="Logo" style="max-width: 120px; max-height: 60px;">` : 
                                 `<i class="fas fa-building" style="font-size: 3rem; color: #15a086;"></i>`}
-                            <h3>${receipt.companyInfo.showToClients ? (receipt.companyInfo.nombreEmpresa || 'Empresa de Préstamos') : 'Empresa de Préstamos'}</h3>
-                            ${receipt.companyInfo.showToClients ? `
-                                <p>RNC: ${receipt.companyInfo.rnc || '123-456789-1'}</p>
-                                <p>${receipt.companyInfo.telefono || '809-555-5555'} - ${receipt.companyInfo.direccion || 'Calle Principal #123, Santo Domingo'}</p>
-                            ` : ''}
+                            <h3>${receipt.companyInfo.nombreEmpresa || 'PlusMoney Retom'}</h3>
+                            <p>RNC: ${receipt.companyInfo.rnc || '132-0000000-0'}</p>
+                            <p>${receipt.companyInfo.telefono || '809-555-5555'} - ${receipt.companyInfo.direccion || 'Calle Principal #123, Santo Domingo'}</p>
                         </div>
                         <hr>
                         <h3 style="text-align: center;">RECIBO DE PAGO</h3>
