--- a/Public-user.html
+++ b/Public-user.html
@@ -50,6 +50,9 @@
         body {
             font-family: 'Roboto', sans-serif;
             background-color: var(--background-color);
+            background-image: 
+            radial-gradient(circle at 10% 20%, rgba(21, 160, 134, 0.1) 0%, transparent 20%),
+            radial-gradient(circle at 90% 80%, rgba(231, 76, 60, 0.1) 0%, transparent 20%);
             color: var(--text-color);
             margin: 0;
             min-height: 100vh;
