--- a/home.html
+++ b/home.html
@@ -1136,6 +1136,23 @@
         display: none;
       }
     }
+
+    /* Oculta las barras de desplazamiento pero mantiene la funcionalidad */
+::-webkit-scrollbar {
+    width: 0 !important;
+    height: 0 !important;
+    display: none;
+}
+
+/* Para Firefox */
+html {
+    scrollbar-width: none;
+}
+
+/* Para Internet Explorer y Edge */
+body {
+    -ms-overflow-style: none;
+}
   </style>
 </head>
 <body>
