--- a/generar-codigo-crear-cuenta.html
+++ b/generar-codigo-crear-cuenta.html
@@ -738,6 +738,98 @@
         ::-webkit-scrollbar-thumb:hover {
             background: var(--primary-dark);
         }
+      /* ESTILOS PARA BOTONES DE SELECCIÓN CON FONDO #2c3e50 */
+
+/* Select dropdowns en grupos de filtros */
+.filter-group select.form-control {
+    background-color: #2c3e50 !important;
+    border: 1px solid rgba(255, 255, 255, 0.2) !important;
+    color: white !important;
+}
+
+/* Efecto hover para selects */
+.filter-group select.form-control:hover {
+    background-color: #3a506b !important;
+    border-color: var(--primary) !important;
+}
+
+/* Efecto focus para selects */
+.filter-group select.form-control:focus {
+    background-color: #2c3e50 !important;
+    border-color: var(--primary) !important;
+    box-shadow: 0 0 0 3px rgba(22, 160, 133, 0.3) !important;
+}
+
+/* Opciones dentro del select */
+.filter-group select.form-control option {
+    background-color: #2c3e50;
+    color: white;
+}
+
+/* Select en el formulario principal */
+.form-group select.form-control {
+    background-color: #2c3e50 !important;
+    border: 1px solid rgba(255, 255, 255, 0.2) !important;
+    color: white !important;
+}
+
+/* Efecto hover para selects del formulario */
+.form-group select.form-control:hover {
+    background-color: #3a506b !important;
+    border-color: var(--primary) !important;
+}
+
+/* Efecto focus para selects del formulario */
+.form-group select.form-control:focus {
+    background-color: #2c3e50 !important;
+    border-color: var(--primary) !important;
+    box-shadow: 0 0 0 3px rgba(22, 160, 133, 0.3) !important;
+}
+
+/* Opciones dentro del select del formulario */
+.form-group select.form-control option {
+    background-color: #2c3e50;
+    color: white;
+}
+
+/* Select en modales */
+.modal-content select.form-control {
+    background-color: #2c3e50 !important;
+    border: 1px solid rgba(255, 255, 255, 0.2) !important;
+    color: white !important;
+}
+
+/* Efecto hover para selects en modales */
+.modal-content select.form-control:hover {
+    background-color: #3a506b !important;
+    border-color: var(--primary) !important;
+}
+
+/* Efecto focus para selects en modales */
+.modal-content select.form-control:focus {
+    background-color: #2c3e50 !important;
+    border-color: var(--primary) !important;
+    box-shadow: 0 0 0 3px rgba(22, 160, 133, 0.3) !important;
+}
+
+/* Opciones dentro del select en modales */
+.modal-content select.form-control option {
+    background-color: #2c3e50;
+    color: white;
+}
+
+/* Estilo para el ícono de flecha en selects */
+select.form-control {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right 15px center;
+    background-size: 16px;
+    padding-right: 45px;
+}
+        
     </style>
 </head>
 <body>
