--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Security Retom - Autenticación Segura</title>
+    <title>Retom - Autenticación Segura</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -815,7 +815,8 @@
                 <i class="fas fa-user-plus menu-icon"></i>
                 <span class="menu-text">Crear Cuenta</span>
             </a>
-            <a href="gestion-usuarios.html" class="menu-item">
+  <!--
+             <a href="gestion-usuarios.html" class="menu-item">
                 <i class="fas fa-users menu-icon"></i>
                 <span class="menu-text">Gestionar Usuarios</span>
             </a>
@@ -842,7 +843,7 @@
             <a href="backup.html" class="menu-item">
                 <i class="fas fa-database menu-icon"></i>
                 <span class="menu-text">Backup</span>
-            </a>
+            </a>     -->
         </div>
         <button class="btn btn-secondary" id="closeAdminMenu" style="margin-top: 20px;">Cerrar</button>
     </div>
