--- a/contrato.html
+++ b/contrato.html
@@ -13,7 +13,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(135deg, #1abc9c 0%, #16a085 100%);
+      background: linear-gradient(135deg, #2c3e50 0%, #2c3e50 100%);
       display: flex;
       flex-direction: column;
       justify-content: center;
