--- a/index.html
+++ b/index.html
@@ -1423,7 +1423,7 @@
         step2.classList.remove('active');
         step2.classList.remove('completed');
         
-        formTitle.textContent = 'Bienvenido a SECURITY RETOM';
+        formTitle.textContent = 'Bienvenido a PlusMoney';
         
         // Limpiar formulario
         loginEmail.value = '';
