--- a/home.html
+++ b/home.html
@@ -1716,14 +1716,14 @@ body {
             <p>Configurar información de la empresa</p>
           </a>
         </div>
-        <!--  
+         
         <div class="config-card">
-          <a href="backup-settings.html" style="text-decoration: none; color: inherit;">
-            <i class="fas fa-database"></i>
-            <h3>Copias de Seguridad</h3>
-            <p>Configuración de respaldos</p>
+          <a href="perfil.html" style="text-decoration: none; color: inherit;">
+            <i class="fa-solid fa-address-card"></i>
+            <h3>Cuenta</h3>
+            <p>Restablecer contraseña, modificar nombre y fotos de tu perfil </p>
           </a>
-        </div> -->
+        </div> 
       </div>
       
       <div class="card">
