--- a/carta-mas-clientes.html
+++ b/carta-mas-clientes.html
@@ -955,7 +955,7 @@
       </a>
       <div class="user-profile">
         <span class="text-white" id="usernameDisplay">Usuario</span>
-        <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="User" class="user-avatar" id="userAvatar">
+        <img src="logo.png" alt="User" class="user-avatar" id="userAvatar">
         <div class="action-btn-wrapper">
           <button class="action-btn" id="notificationsBtn">
             <i class="fas fa-bell"></i>
