--- a/home.html
+++ b/home.html
@@ -1716,6 +1716,14 @@ body {
             <p>Configurar información de la empresa</p>
           </a>
         </div>
+        
+        <div class="config-card">
+          <a href="centro-descarga.html" style="text-decoration: none; color: inherit;">
+            <i class="fa-solid fa-download"></i>
+            <h3>Descargar</h3>
+            <p>Aplicaciones</p>
+          </a>
+        </div>
          
         <div class="config-card">
           <a href="perfil.html" style="text-decoration: none; color: inherit;">
