--- a/centro-descarga.html
+++ b/centro-descarga.html
@@ -167,7 +167,7 @@
         <div class="iconos-grid">
             <a href="money.apk" class="icono-boton">
                 <div class="icono-container">
-                    <img class="icono-img" src="money-cliente.html" alt="ApplusMoney">
+                    <img class="icono-img" src="money-cliente.png" alt="ApplusMoney">
                 </div>
                 <h3 class="icono-titulo">PlusMoney Clientes</h3>
             </a>
