--- a/centro-descarga.html
+++ b/centro-descarga.html
@@ -250,7 +250,7 @@
         </div>
 
         <div class="iconos-grid">
-            <div class="icono-boton" data-url="money.apk">
+            <div class="icono-boton" data-url="https://www.mediafire.com/file/whj26j3cb1tprkd/money.apk.apk/file">
                 <div class="icono-container">
                     <img class="icono-img" src="money-cliente.png" alt="ApplusMoney" onload="this.classList.add('loaded')">
                     <div class="icono-fallback"><i class="fas fa-wallet"></i></div>
