--- a/contrato.html
+++ b/contrato.html
@@ -97,6 +97,7 @@
 
     /* Estilos del cuerpo del contrato */
     body {
+      background-color: white;
       font-family: 'Arial', sans-serif;
       line-height: 1.6;
       color: #333;
