--- a/Public-user.html
+++ b/Public-user.html
@@ -2397,7 +2397,7 @@
             <div class="micro-menu-header">
                 <img src="logo.png" alt="PlusMoney Retom" class="micro-menu-logo">
                 <div class="micro-menu-title">PlusMoney Retom</div>
-            </div>
+            </div>  <!--
             <a href="info-prestamo.html" class="micro-menu-item">
                 <i class="fas fa-info-circle"></i>
                 <span>Información de Préstamos</span>
@@ -2413,16 +2413,16 @@
             <a href="#" class="micro-menu-item">
                 <i class="fas fa-question-circle"></i>
                 <span>Ayuda</span>
-            </a>
-            <a href="#" class="micro-menu-item">
+            </a> -->
+            <a href="privacidad.html" class="micro-menu-item">
                 <i class="fas fa-shield-alt"></i>
                 <span>Política de Privacidad</span>
             </a>
-            <a href="#" class="micro-menu-item">
+            <a href="seguridad.html" class="micro-menu-item">
                 <i class="fas fa-lock"></i>
                 <span>Política de Seguridad</span>
             </a>
-            <a href="#" class="micro-menu-item">
+            <a href="acerca.html" class="micro-menu-item">
                 <i class="fas fa-info-circle"></i>
                 <span>Acerca de</span>
             </a>
