--- a/privacidad.html
+++ b/privacidad.html
@@ -138,7 +138,7 @@
         
         <div class="header">
             <h1><i class="fas fa-shield-alt"></i> Política de Privacidad</h1>
-            <p>Última actualización: 15 de Enero, 2024</p>
+            <p>Última actualización: 11 de Julio, 2025</p>
         </div>
 
         <h2>1. Introducción</h2>
@@ -195,13 +195,12 @@
         <h2>9. Contacto</h2>
         <p>Si tiene preguntas sobre esta política de privacidad, puede contactarnos:</p>
         <ul>
-            <li>Por email: privacidad@plusmoneyretom.com</li>
-            <li>Por teléfono: 809-555-5555</li>
-            <li>Por correo: Calle Principal #123, Santo Domingo, República Dominicana</li>
+            <li>Por email: infor@retomrt.com</li>
+            <li>Por teléfono: (849) 515-8440</li>
         </ul>
 
         <div class="last-updated">
-            <p>© 2024 Retom. Todos los derechos reservados.</p>
+            <p>© 2025 Retom. Todos los derechos reservados.</p>
         </div>
     </div>
 </body>
