--- a/acerca.html
+++ b/acerca.html
@@ -191,11 +191,11 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container"> <!--
         <a href="index.html" class="back-button">
-            <i class="fas fa-arrow-left"></i> Volver al Inicio
+            <i class="fas fa-arrow-left"></i> Volver al Inicio 
         </a>
-        
+        -->
         <div class="header">
             <h1><i class="fas fa-info-circle"></i> Acerca de PlusMoney Retom</h1>
             <p>Tu socio confiable en soluciones financieras</p>
