--- a/privacidad.html
+++ b/privacidad.html
@@ -131,10 +131,10 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container"> <!--
         <a href="index.html" class="back-button">
             <i class="fas fa-arrow-left"></i> Volver al Inicio
-        </a>
+        </a> -->
         
         <div class="header">
             <h1><i class="fas fa-shield-alt"></i> Política de Privacidad</h1>
