--- a/seguridad.html
+++ b/seguridad.html
@@ -139,10 +139,10 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container"><!--
         <a href="index.html" class="back-button">
             <i class="fas fa-arrow-left"></i> Volver al Inicio
-        </a>
+        </a> -->
         
         <div class="header">
             <h1><i class="fas fa-lock"></i> Política de Seguridad</h1>
